# seraph

./: .gitignore  .kilocodeignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  REPORT.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  docker-compose.dev.yaml  docker-compose.prod.yaml  env.dev.example  env.prod.example  manage.sh  mcp.sh  reset.sh
backend/: Dockerfile  README.md  conftest.py  pyproject.toml
backend/config/: settings.py
backend/data/: mcp-servers.example.json  seraph.db  soul.md
backend/scripts/: __init__.py  backend_test_shards.py  run_backend_test_shard.py
backend/src/: app.py  llm_logger.py  llm_runtime.py  local_runtime_profile_verifier.py  local_runtime_profiles.py
backend/tests/: conftest.py  test_activity_api.py  test_activity_digest.py  test_agent.py  test_always_available_reach_media.py  test_app.py  test_approval_tools.py  test_approvals_api.py  test_audit_api.py  test_audit_formatting.py  test_audit_runtime.py  test_automation_api.py  test_backend_test_shards.py  test_background.py  test_broad_reach_field_ops.py  test_browser_api.py  test_browser_computer_use_parity_depth.py  test_browser_computer_use_production.py  test_browser_provider_usability.py  test_browser_session_tool.py  test_browser_tool.py  test_bundled_capability_packs.py  test_canvas_api.py  test_capabilities_api.py  test_catalog_api.py  test_certified_secure_host.py  test_chat_api.py  test_clarify_tool.py  test_cockpit_efficiency_benchmark.py  test_consolidation_reliability.py  test_consolidator.py  test_container_grade_secure_host.py  (+161 more)
(+709 files in other folders)
