[project]
name = "backend"
version = "0.1.0"
description = "Seraph's backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.50.0",
    "smolagents[litellm,mcp]>=1.24.0",
    "mcp>=1.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "ddgs>=7.0.0",
    "websockets>=14.0",
    # Phase 1 — Persistent Identity
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.4.0",
    # Phase 2 — Capable Executor
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "gcsa>=2.6.0",
    "google-auth-oauthlib>=1.2.0",
    "simplegmail>=4.1.0",
    # Phase 3 — The Observer
    "apscheduler>=3.11.0,<4.0.0",
    # Phase 3.5 — Context Window
    "tiktoken>=0.8",
    # Vault
    "cryptography>=43.0.0",
    # Reliability
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
